--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,13 @@ services:
     build: .
     restart: always
     command: bundle exec sidekiq
+    depends_on:
+      - redis
+      - postgres
+    volumes:
+      - .:/my-app
+    environment:
+      - REDIS_URL_SIDEKIQ=redis://redis:6379/1
     networks:
       - backend
 
@@ -30,16 +37,26 @@ services:
       - backend
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.3.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.13.0
     environment:
-      network.host: "0.0.0.0"
-      http.port: "9200"
-      transport.tcp.port: "9300"
+      - xpack.security.enabled=false
+      - discovery.type=single-node
     volumes:
-      - ./.data/elastic:/usr/share/elasticsearch/data
+       - elasticsearch_data:/usr/share/elasticsearch/data
     ports:
       - "9200:9200"
       - "9300:9300"
+    networks:
+      - backend
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.11.0
+    environment:
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+    depends_on:
+      - elasticsearch
+    ports:
+      - 5601:5601
     networks:
       - backend
 
@@ -49,18 +66,23 @@ services:
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     ports:
       - "3000:3000"
+    depends_on:
+      - postgres
+      - sidekiq
+      - redis
     volumes:
       - .:/my-app
     environment:
-      ELASTICSEARCH_HOST: "elasticsearch"
-      ELASTICSEARCH_PORT: "9200"
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - REDIS_URL_SIDEKIQ=redis://redis:6379/1
     networks:
       - backend
 
 volumes:
   postgres:
   redis:
-  elasticsearch:
+  elasticsearch_data:
+    driver: local
 
 networks:
   backend:
